# amzTempAutoUpload

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_ANALYSIS_REPORT.md  README.md  build_all.bat  md  output.txt  process.py  prov_uploadEcel_Split_azd.py  prov_uploadEcel_Split_azh.py  prov_uploadEcel_Split_hd.py  prov_uploadEcel_Split_hh.py  prov_uploadEcel_Split_kle.py  prov_uploadEcel_Split_std.py  prov_uploadEcel_Split_td.py  prov_uploadEcel_Split_th.py  pyproject.toml  requirements-dev.txt  requirements.txt  sku.md  split_excel.py  splite.py  xkbash命令.txt
backup_original/: prov_uploadEcel_Split_azh.py  prov_uploadEcel_Split_hh.py  prov_uploadEcel_Split_td.py  prov_uploadEcel_Split_th.py
config/: categories.yaml
docs/: CHANGELOG.md  README_usage.md  REFACTOR_PLAN.md  architecture.md  buffer.md  mailPrompt.md  profit_calculator.md
md/: buffer.md
src/: __init__.py  color_translator.py  config_loader.py  main.py  profit_calculator.py
src/amazon_listing_toolkit/: __init__.py  cli.py  color_translator.py  config_loader.py  profit_calculator.py
src/amazon_listing_toolkit/processors/: __init__.py  base_processor.py
src/processors/: __init__.py  azd.py  azh.py  base_processor.py  hd.py  hh.py  kle.py  std.py  td.py  th.py
tests/: test_color_translator.py  test_config_loader.py  test_excel_splitter.py  test_processing.py
